Revert "Merge pull request #164 from spiculedata/test/hegel-property-based-tests"
This reverts commit e2e8cb3701945f99b8ac691093126bd5a33bd3fd, reversing
changes made to c42d0f655ff55284c230daf757aea3f31b7df574.